<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:baselineAligned="false"
    android:orientation="horizontal" >

    <FrameLayout
        android:id="@+id/videoframe"
        android:layout_width="0dp"
        android:layout_height="match_parent"
        android:layout_weight="1" >

        <com.weemo.sdk.view.WeemoVideoInFrame
            android:id="@+id/video_in"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:background="@android:color/darker_gray" >
        </com.weemo.sdk.view.WeemoVideoInFrame>

        <com.weemo.sdk.view.WeemoVideoOutPreviewFrame
            android:id="@+id/video_out"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_gravity="top|right"
            android:background="@android:color/black" >

        </com.weemo.sdk.view.WeemoVideoOutPreviewFrame>
    </FrameLayout>

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="fill_parent"
        android:orientation="vertical"
        android:paddingLeft="15dp"
        android:paddingRight="15dp" >

        <ImageView
            android:id="@+id/toggle_in"
            android:layout_width="wrap_content"
            android:layout_height="0dp"
            android:layout_gravity="center"
            android:layout_weight="1"
            android:contentDescription="@string/content_description_mute_sound"
            android:src="@drawable/call_device_access_volume_on" />

        <ImageView
            android:id="@+id/mute_out"
            android:layout_width="wrap_content"
            android:layout_height="0dp"
            android:layout_gravity="center"
            android:layout_weight="1"
            android:contentDescription="@string/content_description_mute_mic"
            android:src="@drawable/call_device_access_mic_on" />

        <ImageView
            android:id="@+id/video"
            android:layout_width="wrap_content"
            android:layout_height="0dp"
            android:layout_gravity="center"
            android:layout_weight="1"
            android:contentDescription="@string/content_description_video"
            android:src="@drawable/call_device_access_video_on" />

        <ImageView
            android:id="@+id/video_toggle"
            android:layout_width="wrap_content"
            android:layout_height="0dp"
            android:layout_gravity="center"
            android:layout_weight="1"
            android:contentDescription="@string/content_description_video_toggle"
            android:src="@drawable/call_device_access_switch_video" />

        <ImageView
            android:id="@+id/hangup"
            android:layout_width="wrap_content"
            android:layout_height="0dp"
            android:layout_gravity="center"
            android:layout_weight="1"
            android:contentDescription="@string/content_description_hangup"
            android:src="@drawable/call_device_access_end_call" />
    </LinearLayout>

</LinearLayout>